--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-final-form": "^6.5.9",
     "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
