--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/node": "20.12.13",
+    "@types/react": "18.3.3",
     "daisyui": "^4.11.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
